# ml-stats

./: .gitignore  README.md  pyproject.toml
docs/: roadmap.md
docs/notes/: knn.md
notebooks/: knn.ipynb
practical/knn/: knn.py
scratch/knn/: knn.py
